corrected size +added option
new option : showValue

--- a/example/leaflet-slider.html
+++ b/example/leaflet-slider.html
@@ -31,9 +31,9 @@
     		max: 4,
     		value: 2,
     		step:0.1,
-    		size: '250px'
-		});
-		slider.addTo(map);
+    		size: '250px',
+    		axis:'vertical'
+		}).addTo(map);
 
 	</script>
 </body>
