renamed "axis" "orientation"

--- a/example/leaflet-slider.html
+++ b/example/leaflet-slider.html
@@ -32,7 +32,7 @@
     		value: 2,
     		step:0.1,
     		size: '250px',
-    		axis:'vertical'
+    		orientation:'vertical'
 		}).addTo(map);
 
 	</script>
