--- a/example/leaflet-slider.html
+++ b/example/leaflet-slider.html
@@ -25,15 +25,18 @@
 				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
 			id: 'examples.map-i875mjb7'
 		}).addTo(map);
+
 		slider = L.control.slider(function(value) {
     			console.log(value);
 			}, {
-    		max: 4,
-    		value: 2,
+    		max: 6,
+    		value: 25,
     		step:0.1,
     		size: '250px',
-    		orientation:'vertical'
+    		orientation:'horizontal',
+    		id: 'slider'
 		}).addTo(map);
+
 
 	</script>
 </body>
